# NervaPy

./: .gitignore  README.md  README.rst  STRD_IMPLEMENTATION.md  pyproject.toml  pytest.ini  setup.py
.gitea/: WORKFLOWS.md
.gitea/workflows/: code-quality.yml  release.yml  test.yml
.github/workflows/: code-quality.yml  publish.yml  release.yml  test.yml
NervaPy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
codegen/: x86_64.py  x86_64_nacl_test.py  x86_64_test_encoding.py
docs/: ARM_BRANCH_INSTRUCTIONS.md  ARM_IMPORT_EXTERNAL_FUNCTIONS.md  ARM_SHIFTED_REGISTER_ADDRESSING.md  ARMv7M_SUPPORT.md  armv7m_register_strategies.py
examples/: arm_branch_instructions.py  arm_cortex_m_example.py  arm_import_external_functions.py  arm_ldr_shifted_register.py  arm_rust_integration.py  final_high_register_demo.py  final_implementation_summary.py  kernels.rs  test_high_register_strategies.py  test_register_constraints.py  test_simple_strategies.py
examples/make/: matmul-opt.py
examples/nmake/: transpose4x4-opt.py
nervapy/: __init__.py  abi.py  arm.py  codegen.py  constant_data.py  encoder.py  function.py  literal.py  loader.py  name.py  parse.py  util.py  writer.py
nervapy/arm/: __init__.py  abi.py  formats.py  function.py  generic.py  instructions.py  isa.py  literal_pool.py  microarchitecture.py  pseudo.py  registers.py  vfpneon.py
nervapy/c/: __init__.py  types.py
nervapy/common/: __init__.py  regalloc.py
nervapy/x86_64/: __init__.py  __main__.py  abi.py  amd.py  avx.py  crypto.py  encoding.py  fma.py  function.py  generic.py  instructions.py  isa.py  lower.py  mask.py  meta.py  mmxsse.py  nacl.py  operand.py  options.py  pseudo.py  registers.py  types.py  uarch.py
sphinx/: index.rst  nervapy.rst
tests/: test_elf.py  test_literal.py
tests/arm/: test_and_w_eor_w.py  test_arm.py  test_armv7m.py  test_armv7m_registers.py  test_armv8m.py  (+13 more)
(+30 files in other folders)
